# teckel-rs

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  trigger-docs-deploy.yml
crates/teckel-model/: Cargo.toml
crates/teckel-model/src/: asset.rs  error.rs  expr.rs  lib.rs  pipeline.rs  quality.rs  source.rs  types.rs
crates/teckel-parser/: Cargo.toml
crates/teckel-parser/src/: dag.rs  lib.rs  rewrite.rs  validate.rs
crates/teckel-parser/src/expr/: mod.rs  parser.rs
crates/teckel-parser/src/resolve/: config_merger.rs  mod.rs  secrets.rs  variables.rs
crates/teckel-parser/src/yaml/: document.rs  exposure.rs  input.rs  mod.rs  operations.rs  output.rs  quality.rs  streaming.rs  transformation.rs
website/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  teckelSharedConfig.ts
website/docs/: intro.md
website/docs/api-reference/: error-catalog.md  teckel-model.md  teckel-parser.md
website/docs/architecture/: domain-model.md  overview.md  parsing-pipeline.md
website/docs/parsing/: config-merging.md  secrets.md  validation.md  variables.md
website/src/css/: custom.css
website/src/pages/: index.tsx
